src/test/ui/parser/removed-syntax-field-semicolon.rs
struct S {
    bar: ();
    //~^ ERROR expected `,`, or `}`, found `;`
}

fn main() {}
